--- a/legal/03-Cybercrime_Convention.tex
+++ b/legal/03-Cybercrime_Convention.tex
@@ -174,3 +174,172 @@ mutual assistance requests, overcoming current delays in
 traditional bureaucratic channels
 
 \section{Legal measures against computer-related fraud and forgery}
+
+\subsection{Criminalization of Fraud and Computer-related Forgery}
+
+The Convention requires State Parties to criminalize specific conducts, including fraud and forgery carried out through computer systems. This includes, for instance, digital document forgery and fraud involving the use of electronic data to deceive or gain financial benefits. \\\textbf{Computer-related fraud involves using computers to gain economic benefits} through deceit, while \textbf{forgery includes altering or creating digital documents} with the intent to mislead. 
+
+
+\subsubsection{Computer-Related Forgery}
+Each Party shall adopt such legislative and other measures as may be necessary to establish as criminal offences under its domestic law, when committed intentionally and without right, the input, \textbf{alteration}, \textbf{deletion}, or s\textbf{uppression of computer data}, resulting in inauthentic data with the intent that it be considered or acted upon for legal purposes as if it were authentic, regardless whether or not the data is directly readable and intelligible. A Party may require an intent to defraud, or similar dishonest intent, before criminal liability attaches. \\
+This kind of alteration it's often seen as less grave compared to the forgery fo a physical document, becasue at a cercain level is easier to do (like copy the image of a firm on a document).
+
+\subsubsection{Computer-Related Fraud}
+
+Each Party shall adopt such legislative and other measures as may be necessary to establish as criminal offences under its domestic law, when committed intentionally and without right, the causing of a loss of property to another person by:
+
+\begin{itemize}
+\item any input, alteration, deletion or suppression of computer data,
+\item any interference with the functioning of a computer system
+\end{itemize}
+
+With fraudulent or dishonest intent of procuring, without right, an economic benefit for oneself or for another person.
+
+\subsection{Procedural Law Tools}
+
+To effectively address these crimes, the Convention introduces procedural law tools that allow for quicker and more effective investigations. For example, \textbf{expedited preservation of volatile data} and \textbf{seizure of information} are crucial tools for gathering evidence in investigations against digital fraud and forgery. The Convention mandates that criminal justice authorities must be able to use effective means, such as:
+
+\begin{itemize}[itemsep=0pt]
+    \item \textit{Search and seizure}
+    \item \textit{Access to stored data in computer systems}
+\end{itemize}
+
+These tools must be applicable regardless of the type of crime involved.
+
+\section{Procedural powers for law enforcement}
+
+\subsection{Synopticon and Omnipticon}
+
+A \textbf{synoption} world, the many watch the few, so there is possibility to control the information, but in the digital world, in a \textbf{omnipticon} world, the many watch the many, so tit's extremly complex try to control the information. \\
+The tv, as a synoption point of view have also keep the role of an "official information soruce", but in the last years, with the diffusion in the use of youtube or similar platform, also this role is starting to crumble. \\
+In this new scenario, we need to consider how is a mess, from a legal stand point manage all the video.
+
+\begin{boxH}
+  The \textbf{Main Concert} for private citizens and public administration using cloud techmologies is not so much the possibile increase in "cyber" fraud or crime, than the loss of control over one's data, for privacy reason and \textbf{digital investigaion purposes}
+\end{boxH}
+
+\subsection{Some articles}
+
+\begin{boxH}
+  Articles from 14 to 20 are not very important for the Exam
+\end{boxH}
+
+\subsubsection{Scope of Procedural Provisions (Article 14)}
+
+Each Party must adopt \textbf{legislative measures} to define the \textit{powers and procedures} for specific criminal investigations or proceedings.\\ The provisions apply to:
+
+\begin{itemize}[itemsep=0pt]
+    \item Offenses covered by the Convention,
+    \item All other offenses committed through \textbf{computer systems},
+    \item All \textbf{electronic evidence} related to any crime.
+\end{itemize}
+
+\subsubsection{Conditions and Safeguards (Article 15)}
+
+The application of \textbf{powers and procedures} must ensure \textit{adequate protection of human rights}, following national law and international conventions (e.g., the \textbf{European Convention on Human Rights}). Conditions and safeguards include:
+
+\begin{itemize}[itemsep=0pt]
+    \item \textbf{Judicial or independent supervision},
+    \item Consideration of \textit{proportionality},
+    \item Protection of the \textit{rights of third parties}.
+\end{itemize}
+
+\subsection{Expedited Preservation of Stored Data (Article 16)}
+
+Authorities must be able to \textbf{order or obtain the rapid preservation} of specific computer data, particularly if there is reason to believe that the data is vulnerable to \textit{deletion or modification}. This order may require the data's custodian to preserve the data for up to \textbf{90 days}, which is extendable as needed. \\ In Italy the authorities can access the list of the web access of the previus 5 years of a person if it's under investigation.
+
+\subsubsection{Expedited Disclosure of Traffic Data (Article 17)}
+
+To ensure data preservation, authorities can demand rapid disclosure of traffic data to identify service providers and communication pathways, even if multiple providers are involved in the transmission.
+
+\subsubsection{Production Order (Article 18)}
+
+Each Party shall adopt such legislative and other measures as may be necessary to empower its competent authorities to order:
+
+\begin{enumerate}[itemsep=0pt]
+    \item A person in its territory to submit specified computer data in that person’s possession or control, which is stored in a computer system or a computer-data storage medium;
+    \item A service provider offering its services in the territory of the Party to submit subscriber information relating to such services in that service provider’s possession or control.
+\end{enumerate}
+
+\subsubsection{Subscriber Information (Article 18)}
+
+For the purpose of this article, the term \textit{subscriber information} means any information contained in the form of computer data or any other form that is held by a service provider, relating to subscribers of its services other than traffic or content data and by which can be established:
+
+\begin{enumerate}[itemsep=0pt]
+    \item The type of communication service used, the technical provisions taken there to, and the period of service;
+    \item The subscriber’s identity, postal or geographic address, telephone and other access numbers, billing and payment information, available on the basis of the service agreement or arrangement;
+    \item Any other information on the site of the installation of communication equipment, available on the basis of the service agreement or arrangement.
+\end{enumerate}
+
+
+
+\subsubsection{Search and Seizure of Stored Computer Data (Article 19)}
+
+\begin{boxH}
+  One of the least applicated article.
+\end{boxH}
+
+Each Party shall adopt such legislative and other measures as may be necessary to empower its competent authorities to search or similarly access:
+
+\begin{enumerate}[itemsep=0pt]
+    \item A computer system or part of it and computer data stored therein; and
+    \item A computer-data storage medium in which computer data may be stored in its territory.
+\end{enumerate}
+
+\subsubsection{Real-time Collection of Traffic Data (Article 20)}
+
+Authorities can \textbf{collect} or record \textbf{traffic data in real time}, either directly or by requiring service providers to assist in the collection. (convention is usually limited to telco and ISP of the country)
+
+\subsubsection{Interception of Content Data (Article 21)}
+
+For serious offenses, \textbf{authorities may intercept or record the content of specific communications in real time}, either directly or through the cooperation of service providers. 
+
+\subsubsection{Mutual Assistance (Article 25)}
+
+The Parties shall afford one another \textbf{mutual assistance to the widest extent possible} \textbf{for the purpose of investigations or proceedings} concerning criminal offences related to computer systems and data, or for the collection of evidence in electronic form of a criminal offence.
+
+\subsubsection{Expedited Preservation of Stored Computer Data (Article 29)}
+
+A Party may request another Party to order or otherwise obtain the expeditious preservation of data stored by means of a computer system, located within the territory of that other Party and in respect of which the requesting Party intends to submit a request for mutual assistance for the search or similar access, seizure or similar securing, or disclosure of the data.
+
+\subsubsection{Expedited Disclosure of Preserved Traffic Data (Article 30)}
+
+Where, in the course of the execution of a request made pursuant to Article 29 to preserve traffic data concerning a specific communication, the requested Party discovers that a service provider in another State was involved in the transmission of the communication, the requested Party shall expeditiously disclose to the requesting Party a sufficient amount of traffic data to identify that service provider and the path through which the communication was transmitted.
+
+
+\subsection{Article 32. Solution to Russia Concerns}
+A party may, without the authorisatoin of another Party:
+\begin{itemize}
+  \item Acces publicy available stored computer data, regardless of where the data is located geographically
+  \item Access or receive, through a computer system in its territory, stored computer data located in another Party, if the Party obtains the lawful and voluntary consent of the person who has the lawful authority to disclose the data to the Party through that computer system
+\end{itemize}
+
+\subsubsection{Conseguences of Article 32b}
+\begin{boxH}
+LEAs routinely requestand are provided with data from from foreign service providers, withoutformal inter-State process such as mutual legal assistance (MLA). Ebay and Facebook hace dedicated portals for facilitating such Exhcaneges.
+\end{boxH}
+
+There are 5 proposed implementation from the Council of Europe for the article 32b:
+\begin{enumerate}[itemsep=0pt]
+  \item "Transborder access with consent without the limitation to data stored 'in another Party'"
+  \item "Transborder access without consent but with lawfully obtained credentials"
+  \item "Transborder access without consent in good faith or in exigent or other circumstances"
+  \item "When the data is lawfully accessible or available from the initial system™
+  \item If the location of the data is not known, but the person having the power of disposal of the data is physically on the territory of, or a national of the searching Party, the LEA of this Party may be able [to] search or otherwise access the data
+\end{enumerate}
+
+
+\section{Some additional Legal framework}
+
+\begin{boxH}
+  An \textbf{EU regulation} is someting that is directly applicable in all the EU member states, so it's not necessary to be trasposed in the national law of the member states.
+\end{boxH}
+
+\begin{itemize}
+  \item \textbf{Regulation (EU) 2023/1543} of the European Parliament and of the Council of 12 July 2023 on European Production Orders and European Preservation Orders for electronic evidence in criminal proceedings and for the execution of custodial sentences following criminal \\ \href{https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A32023R1543}{Text of the Regulation}
+  \item \textbf{Directive (EU) 2023/1544} of the European Parliament and of the Council of 12 July 2023 laying down harmonised rules on the designation of designated establishments and the appointment of legal representatives for the purpose of gathering electronic evidence in criminal proceedings \\ \href{https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A32023L1544}{Text of the Directive}
+\end{itemize}
+
+\begin{boxH}
+  An \textbf{EU directive} is a legal act that sets out a goal that all EU countries must achieve. However, it is up to the individual countries to devise their own laws on how to reach these goals. (the directive 2023/1544 must be trasposed in the national law by 18 February 2026)
+\end{boxH}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
