--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,8 @@
 \input{legal/01-introduction}
 \input{legal/02-Definition}
 \input{legal/03-Cybercrime_Convention}
+\input{legal/04-Law-48_08}
+\input{legal/05-UN-Resolution}
 
 \part{Tech}
 \input{tech/01-introduction}
