--- a/legal/04-Law-48_08.tex
+++ b/legal/04-Law-48_08.tex
@@ -122,7 +122,7 @@ A significant case involved intercepting communications of mafia organizations i
 In several cyberstalking cases in Italy, digital forensics were employed to trace online threats' origins. Investigators successfully identified offenders through data traffic analysis and IP identification, making this a common approach in Italian jurisprudence.
 
 \section{Types of Corporate Investigations}
-\begin{itemize}
+\begin{itemize}[itemsep=0pt]
     \item \textbf{Unfair Competition:} Investigating unethical practices by rival businesses.
     \item \textbf{Industrial Espionage:} Uncovering the theft of trade secrets and proprietary information.
     \item \textbf{Employee Misconduct:} Addressing violations of company policies and contracts.
@@ -130,13 +130,15 @@ In several cyberstalking cases in Italy, digital forensics were employed to trac
 \end{itemize}
 
 \section{Man-in-the-Middle (MITM) Attacks}
-MITM attacks represent a silent and sophisticated form of cybercrime where an attacker intercepts communication between two parties. This allows criminals to monitor, read, and modify messages undetected, often targeting businesses involved in international trade.
+MITM attacks represent a silent and sophisticated form of cybercrime where an attacker intercepts communication between two parties. This allows criminals to monitor, read, and modify messages undetected, often targeting businesses involved in international trade. \bigskip
+
+The attack's success relies on the attacker's ability to remain undetected while gathering crucial information \textbf{over an extended period}.
 
 \subsection{The Mechanics of MITM Attacks}
-\begin{itemize}
+\begin{itemize}[itemsep=0pt]
     \item \textbf{Initial Breach:} Hackers compromise a company's email system through methods such as phishing, brute force attacks, or trojans.
     \item \textbf{Monitoring Phase:} Attackers observe communications over time, gathering information on business practices and relationships.
-    \item \textbf{Interception:} At an opportune moment, criminals intercept and alter payment instructions, redirecting funds to their accounts.
+    \item \textbf{Interception:} At an opportune moment, criminals intercept and alter payment instructions, redirecting funds to their accounts. When one party requests a payment, the attacker sends fraudulent account details to the other party (like by editing the mail with the invoice).
     \item \textbf{Execution:} Unaware of the fraud, victims transfer funds to the fraudulent account, often resulting in significant financial loss.
 \end{itemize}
 
