--- a/main.tex
+++ b/main.tex
@@ -50,6 +50,9 @@
 \input{tech/01-introduction}
 \input{tech/02-CF_terminoloty}
 \input{tech/03-non_trusted_env_issues.tex}
+\input{tech/04-Tools_Miscellaneous.tex}
+\input{tech/05-lab_set-up.tex}
+\input{tech/06-FileSystem_forensics.tex}
 
 \end{document}
 
