--- a/tech/03-non_trusted_env_issues.tex
+++ b/tech/03-non_trusted_env_issues.tex
@@ -16,7 +16,7 @@ Nowadays, a node infection is obtained through a social engineering attack, that
 \begin{itemize}[itemsep=0pt, topsep=0pt]
   \item nodes capable to read and write data while in transit, actors capable to "poison" routing mechanisms
   \item access and modification of network data flow, redirection versus illegitimate destination
-  \item Sniffers and (growing) family of Man-in the-X  attacks$_{\ref{sec:Mitx}}$
+  \item Sniffers and (growing) family of Man-in the-X  attacks
 \end{itemize}
 
 \subsection{supply chain attacks}
