--- a/legal/05-UN-Resolution.tex
+++ b/legal/05-UN-Resolution.tex
@@ -104,6 +104,8 @@ The expert report requested by the judge shows that Stasi was working on his the
     \end{quote}
 \end{multicols}
 
+
+
 \subsection{James Bate Case: Amazon Echo}
 
 \begin{multicols}{2}
@@ -117,6 +119,11 @@ The expert report requested by the judge shows that Stasi was working on his the
         \textit{Answer of an Amazon Representative}
     \end{quote}
 \end{multicols}
+
+There are prloblems with the term and conditions of the Amazon Echo, as they are record data even without the wake word being issued. This is also correlated with all the problem reguardind the user of dark pattern for avoid that the use could block this kind of data collection. \\
+In another case Amazon refused to give data collected by an Amazon echo to the police and use the term and conditions as exuse. \bigskip
+
+NOTE: particularly attection for device that arrive from China (alsways check the user term and conditions).
 
 \subsection{Ross Compton Case: Pacemaker}
 
@@ -132,6 +139,10 @@ The expert report requested by the judge shows that Stasi was working on his the
     \end{quote}
 \end{multicols}
 
+Accused of frode from the incusance (hose burn), at the end of the process, the judge accept to aquire the data from the peace maker, to check the beat of the heart at the time of the incident. \bigskip
+
+Inside our body there are a lot of data that could be used for the investigation, but the question is: how much of this data could be used for the investigation? 
+
 \section{Facial Recognition Biometric Border}
 
 \begin{multicols}{2}
@@ -146,15 +157,19 @@ The expert report requested by the judge shows that Stasi was working on his the
     \end{quote}
 \end{multicols}
 
+In europe there is a law that proibit the use of facial recognition in real time for the identification of the people, but in the US this is not the case. \bigskip
+
 \section{Categories of Law Enforcement Activity}
 
 \begin{itemize}[itemsep=0pt]
-    \item Situations involving officers observing an ongoing crime
-    \item Situations involving officers investigating a past crime
-    \item Situations involving officers predicting a future crime
+    \item Situations involving officers observing an ongoing crime (\textbf{FaceFirst})
+    \item Situations involving officers investigating a past crime \textbf{(KeyCrime$^3$)}
+    \item Situations involving officers predicting a future crime (\textbf{PredPol}, used in US, illegal in EU for AI act) \\ Tool for analysze crime that could happen in the future baed on the use of bigdata from the db of the law enforcement and social media data. \\ The problem for the critisim is that if you predict a crime in a certain area, the police will go in that area and this could lead to a self-fulfilling prophecy.
 \end{itemize}
 
-\section{5 Pillars of “Police” Directive}
+\section{“Police” Directive}
+
+The Pocile Directive can be seen as a GDPR for the police. It is composed by 5 pillars:
 
 \begin{itemize}[itemsep=0pt]
     \item Fairly, lawful, and adequate data processing during criminal investigations or to prevent a crime
