--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,7 @@
 \input{legal/03-Cybercrime_Convention}
 \input{legal/04-Law-48_08}
 \input{legal/05-UN-Resolution}
+\input{legal/06-hacking_team}
 
 \part{Tech}
 \input{tech/01-introduction}
